Added *.jquery.json to ignore in bower.json

--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "*.sublime-*",
     "Grunt*.js",
     "package.json",
-    "isInViewport_*.js"
+    "isInViewport_*.js",
+    "*.jquery.json"
   ]
 }
