--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "isInViewport",
-  "version": "1.1.1",
+  "version": "2.0.0-alpha",
   "homepage": "https://github.com/zeusdeux/isInViewport",
   "authors": [
     "Mudit Ameta <zeusdeux@gmail.com>"
