--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "grunt": "0.4.x",
     "grunt-contrib-uglify": "0.2.x",
     "grunt-contrib-jshint": "~0.8.0",
-    "should": "^3.3.1"
+    "should": "^3.3.1",
+    "phantomjs": "^1.9.7-4",
+    "mocha-phantomjs": "^3.3.2",
+    "mocha": "^1.18.2",
+    "grunt-mocha-phantomjs": "^0.4.3"
   }
 }
