--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
   "name": "isInViewport",
-  "version": "2.0.0-alpha",
+  "version": "2.0.0",
   "homepage": "https://github.com/zeusdeux/isInViewport",
   "authors": [
     "Mudit Ameta <zeusdeux@gmail.com>"
   ],
   "description": "An ultra-light jQuery plugin that tells you if an element is in the viewport but with a twist.",
-  "main": "lib/isInViewport.js",
+  "main": "lib/isInViewport.min.js",
   "keywords": [
     "viewport",
     "jquery",
@@ -17,12 +17,13 @@
     "**/.*",
     "node_modules",
     "bower_components",
-    "test",
     "tests",
     "*.sublime-*",
     "Grunt*.js",
     "package.json",
     "isInViewport_*.js",
-    "*.jquery.json"
+    "*.jquery.json",
+    ".travis*",
+    ".git*"
   ]
 }
