--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "description": "An ultra-light jQuery plugin that tells you if an element is in the viewport but with a twist.",
   "main": "lib/isInViewport.js",
+  "scripts": {
+    "test": "grunt test",
+    "build": "grunt"
+  },
   "directories": {
     "example": "examples"
   },
