--- a/package.json
+++ b/package.json
@@ -26,13 +26,12 @@
   },
   "devDependencies": {
     "grunt": "0.4.x",
-    "grunt-contrib-uglify": "0.2.x",
+    "grunt-blanket-mocha": "^0.4.0",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "~0.8.0",
-    "should": "^3.3.1",
-    "phantomjs": "^1.9.7-4",
-    "mocha-phantomjs": "^3.3.2",
+    "grunt-contrib-uglify": "0.2.x",
     "mocha": "^1.18.2",
-    "grunt-mocha-phantomjs": "^0.4.3",
-    "grunt-cli": "^0.1.13"
+    "phantomjs": "^1.9.7-4",
+    "should": "^3.3.1"
   }
 }
