--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
   ],
   "license": "MIT",
   "ignore": [
+    "examples/**",
+    "readme.md",
     "**/.*",
     "node_modules",
     "bower_components",
