--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -1,40 +1,21 @@
-{
-  // Details: https://github.com/victorporof/Sublime-HTMLPrettify#using-your-own-jsbeautifyrc-options
-  // Documentation: https://github.com/einars/js-beautify/
-  "html": {
-    "allowed_file_extensions": ["htm", "html", "xhtml", "xml"],
-    "brace_style": "end-expand", // "expand", "collapse", "expand-strict"
-    "indent_char": " ",
-    "indent_scripts": "normal", // "separate", "keep"
+{    
     "indent_size": 2,
-    "max_preserve_newlines": 4,
-    "preserve_newlines": true,
-    "unformatted": ["a", "sub", "sup", "b", "i", "u", "pre"],
-    "wrap_line_length": 0
-  },
-  "css": {
-    "allowed_file_extensions": ["css", "scss", "sass", "less"],
-    "indent_char": " ",
-    "indent_size": 2
-  },
-  "js": {
-    "allowed_file_extensions": ["js", "json", "jshintrc", "jsbeautifyrc"],
-    "brace_style": "end-expand", // "expand", "collapse", "expand-strict"
-    "break_chained_methods": false,
-    "e4x": false,
-    "eval_code": false,
     "indent_char": " ",
     "indent_level": 0,
-    "indent_size": 2,
     "indent_with_tabs": false,
+    "preserve_newlines": true,
+    "max_preserve_newlines": 4,
+    "space_in_parens": false,
     "jslint_happy": false,
+    "space_after_anon_function": false,
+    "brace_style": "end-expand",
     "keep_array_indentation": false,
     "keep_function_indentation": false,
-    "max_preserve_newlines": 4,
-    "preserve_newlines": true,
     "space_before_conditional": true,
-    "space_in_paren": false,
+    "break_chained_methods": false,
+    "eval_code": false,
     "unescape_strings": false,
-    "wrap_line_length": 0
-  }
+    "wrap_line_length": 0,
+    "end_with_newline": true
 }
+
