getting ready to publish this on npm

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "keywords": [
     "viewport",
-    "jquery"
+    "jquery",
+    "jquery-plugin"
   ],
   "author": "Mudit Ameta",
   "license": "MIT",
