--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "isInViewport",
   "version": "2.2.1",
-  "private": true,
+  "private": false,
   "description": "An ultra-light jQuery plugin that tells you if an element is in the viewport but with a twist.",
   "main": "lib/isInViewport.js",
   "scripts": {
