--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "isInViewport",
-  "version": "2.2.1",
+  "name": "is-in-viewport",
+  "version": "2.2.2",
   "private": false,
   "description": "An ultra-light jQuery plugin that tells you if an element is in the viewport but with a twist.",
   "main": "lib/isInViewport.js",
