--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "is-in-viewport",
-  "version": "2.4.1",
+  "version": "2.4.2",
   "private": false,
   "description": "An ultra-light jQuery plugin that tells you if an element is in the viewport but with a twist.",
   "main": "lib/isInViewport.js",
   "scripts": {
     "test": "grunt test",
-    "build": "grunt",
-    "postinstall": "grunt"
+    "build": "grunt"
   },
   "directories": {
     "example": "examples"
