--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: node_js
 node_js:
-  - "0.10"
-  - "0.12"
-  - "4.1"
-  - "5.4"
+  - "node"
 script:
-  npm run-script build
+  npm run build
