Update docs and bump major version

--- a/examples/es6-example/package.json
+++ b/examples/es6-example/package.json
@@ -2,10 +2,10 @@
   "name": "is-in-viewport-es6-example",
   "version": "1.0.0",
   "description": "An example of using is-in-viewport in an es6 module",
-  "main": "advanced.compiled.js",
+  "main": "main.compiled.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c",
+    "start": "rollup -c && serve . -p 8000",
     "prepublish": "rollup -c"
   },
   "author": "Mudit Ameta",
@@ -13,9 +13,11 @@
   "devDependencies": {
     "rollup": "^0.41.5",
     "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "^2.0.0"
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "serve": "^5.0.3"
   },
   "dependencies": {
+    "is-in-viewport": "^3.0.0",
     "jquery": "^3.1.1"
   }
 }
