fixed jquery-migrate-3.0.1.js:76 JQMIGRATE: jQuery.expr[':'] is deprecated; use jQuery.expr.pseudos

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "is-in-viewport",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "private": false,
   "description": "An ultra-light jQuery plugin that tells you if an element is in the viewport but with a twist.",
   "main": "lib/isInViewport.js",
@@ -32,26 +32,26 @@
     "jquery": ">1.7.0"
   },
   "devDependencies": {
-    "del": "^2.2.2",
-    "eslint": "^3.17.1",
-    "eslint-config-standard": "^7.0.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^2.1.1",
-    "gulp": "^3.9.1",
-    "gulp-buble": "^0.8.0",
-    "gulp-cli": "^1.2.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-eslint": "^3.0.1",
-    "gulp-mocha-phantomjs": "^0.12.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^2.4.1",
-    "gulp-uglify": "^2.1.0",
-    "mocha": "^3.2.0",
-    "pump": "^1.0.2",
-    "rollup-plugin-buble": "^0.15.0",
-    "rollup-stream": "^1.19.0",
-    "should": "^11.2.1",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "del": "2.2.2",
+    "eslint": "3.17.1",
+    "eslint-config-standard": "7.0.1",
+    "eslint-plugin-promise": "3.5.0",
+    "eslint-plugin-standard": "2.1.1",
+    "gulp": "3.9.1",
+    "gulp-buble": "0.8.0",
+    "gulp-cli": "1.2.2",
+    "gulp-concat": "2.6.1",
+    "gulp-eslint": "3.0.1",
+    "gulp-mocha-phantomjs": "0.12.1",
+    "gulp-rename": "1.2.2",
+    "gulp-sourcemaps": "2.4.1",
+    "gulp-uglify": "2.1.0",
+    "mocha": "3.2.0",
+    "pump": "1.0.2",
+    "rollup-plugin-buble": "0.15.0",
+    "rollup-stream": "1.19.0",
+    "should": "11.2.1",
+    "vinyl-buffer": "1.0.0",
+    "vinyl-source-stream": "1.1.0"
   }
 }
