--- a/now.json
+++ b/now.json
@@ -13,10 +13,11 @@
     { "src": "examples/index.html", "use": "@now/static" },
     { "src": "examples/isInViewport.js", "use": "@now/static" },
     { "src": "examples/isInViewport.js.map", "use": "@now/static" },
-    { "src": "examples/tests/**/*", "use": "@now/static" }
+    { "src": "tests/**/*", "use": "@now/static" }
   ],
   "routes": [
     { "src": "/", "dest": "/examples/index.html"},
+    { "src": "/tests/(?<path>.*)", "dest": "/tests/$path"},
     { "src": "/(?<path>.*)", "dest": "/examples/$path"}
   ],
   "github": {
