--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "test": "gulp test",
     "build": "gulp",
     "clean": "gulp clean",
-    "prepublish": "gulp"
+    "prepublish": "gulp",
+    "deploy": "export URL_TO_ALIAS=$(now --no-clipboard -t $NOW_TOKEN)",
+    "prealias": "echo \"Aliasing -> $URL_TO_ALIAS\"",
+    "alias": "now alias -t $NOW_TOKEN $URL_TO_ALIAS isinviewport.mudit.xyz && now alias -t $NOW_TOKEN $URL_TO_ALIAS www.isinviewport.mudit.xyz",
+    "postalias": "unset URL_TO_ALIAS"
+
   },
   "directories": {
     "example": "examples"
