Fix missing name key in now.json breaking deploys

--- a/now.json
+++ b/now.json
@@ -1,4 +1,5 @@
 {
+  "name": "isInViewport",
   "version": 2,
   "public": false,
   "alias": ["isinviewport.mudit.xyz", "www.isinviewport.mudit.xyz"],
